--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,4 +6,4 @@ deploy:
     - tags
   stage: deploy
   script:
-    - curl -sS --show-error --fail --data tag=${CI_COMMIT_TAG} "https://__token__:${DEPLOY_TOKEN}@git.cic.kz/api/v4/projects/${CI_PROJECT_ID}/packages/composer"git t
+    - curl -sS --show-error --fail --data tag=${CI_COMMIT_TAG} "https://__token__:${DEPLOY_TOKEN}@git.cic.kz/api/v4/projects/${CI_PROJECT_ID}/packages/composer"
