--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "type": "library",
     "license": "proprietary",
     "require": {
-        "guzzlehttp/guzzle": "^7.3"
+        "guzzlehttp/guzzle": "^7.3",
+        "phpunit/phpunit": "^9.5"
     },
     "config":{
         "preferred-install": "dist",
