--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,41 @@
 stages:
   - deploy
 
+.phpunit:
+  stage: linting
+  script:
+    - phpunit .
+
+phpunit-7.1:
+  extends: .phpunit
+  image: reg.cic.kz/centras/phpunit:php-7.1
+
+phpunit-7.2:
+  extends: .phpunit
+  image: reg.cic.kz/centras/phpunit:php-7.2
+
+phpunit-7.3:
+  extends: .phpunit
+  image: reg.cic.kz/centras/phpunit:php-7.3
+
+phpunit-7.4:
+  extends: .phpunit
+  image: reg.cic.kz/centras/phpunit:php-7.4
+
+phpunit-8.0:
+  extends: .phpunit
+  image: reg.cic.kz/centras/phpunit:php-8.0
+
+phpunit-8.1:
+  extends: .phpunit
+  image: reg.cic.kz/centras/phpunit:php-8.1
+
+##############################################################################
+
 deploy:
   only:
     - tags
   stage: deploy
   script:
     - curl -sS --show-error --fail --data tag=${CI_COMMIT_TAG} "https://__token__:${DEPLOY_TOKEN}@git.cic.kz/api/v4/projects/${CI_PROJECT_ID}/packages/composer"
+
