--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,15 @@
 stages:
+  - linting
   - deploy
+
+##############################################################################
 
 .phpunit:
   stage: linting
   script:
     - phpunit .
+
+##############################################################################
 
 phpunit-7.1:
   extends: .phpunit
