--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,7 @@ stages:
   tags:
     - docker
   script:
+    - composer install
     - phpunit .
 
 ##############################################################################
