--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,21 +14,21 @@ stages:
 
 ##############################################################################
 
-phpunit-php7.1:
-  extends: .phpunit
-  image: reg.cic.kz/centras/phpunit:php-7.1
+# phpunit-php7.1:
+#   extends: .phpunit
+#   image: reg.cic.kz/centras/phpunit:php-7.1
 
-phpunit-php7.2:
-  extends: .phpunit
-  image: reg.cic.kz/centras/phpunit:php-7.2
-
-phpunit-php7.3:
-  extends: .phpunit
-  image: reg.cic.kz/centras/phpunit:php-7.3
-
-phpunit-php7.4:
-  extends: .phpunit
-  image: reg.cic.kz/centras/phpunit:php-7.4
+# phpunit-php7.2:
+#   extends: .phpunit
+#   image: reg.cic.kz/centras/phpunit:php-7.2
+# 
+# phpunit-php7.3:
+#   extends: .phpunit
+#   image: reg.cic.kz/centras/phpunit:php-7.3
+# 
+# phpunit-php7.4:
+#   extends: .phpunit
+#   image: reg.cic.kz/centras/phpunit:php-7.4
 
 phpunit-php8.0:
   extends: .phpunit
