--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ stages:
     - docker
 
   variables:
-    - XDEBUG_MODE=coverage
+    XDEBUG_MODE: coverage
   
   script:
     - composer install
