--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,6 +14,7 @@ stages:
   
   script:
     - composer install
+    - composer require --dev phpunit/php-code-coverage
     - phpunit --coverage-text --colors=never  --log-junit report.xml  --coverage-cobertura=coverage.cobertura.xml .
 
   artifacts:
