--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ stages:
 .phpunit:
   stage: testing
   tags:
-    - docker
+    - micro-docker
 
   variables:
     XDEBUG_MODE: coverage
@@ -63,5 +63,7 @@ deploy:
   only:
     - tags
   stage: deploy
+  tags:
+    - micro-docker
   script:
     - curl -sS --show-error --fail --data tag=${CI_COMMIT_TAG} "https://__token__:${DEPLOY_TOKEN}@git.cic.kz/api/v4/projects/${CI_PROJECT_ID}/packages/composer"
